<?xml version="1.0"?>
<package format="2">
  <name>pure_event_reconstruction</name>
  <version>0.0.0</version>
  <description>The pure_event_reconstruction package</description>
  <maintainer email="cedric.scheerlinck@anu.edu.au">Cedric Scheerlinck</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dvs_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
